--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
   },
   "homepage": "https://github.com/tuiduandecheng/littleOrangeNode#readme",
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "captchapng": "0.0.1",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
+    "mongodb": "^3.1.1",
     "xtemplate": "^4.6.1",
     "xtpl": "^3.4.0"
   }
